--- a/Trex/index.html
+++ b/Trex/index.html
@@ -17,7 +17,7 @@
 <button onclick="goBack()">Back</button> 
 
 <div id="iframeContainer">
-  <iframe src="https://jivinsardine.github.io/Palm-API-ChatBot-V2/" width="100%" height="100%">
+  <iframe src="https://jivinsardine.github.io/Trex/" width="100%" height="100%">
   </iframe>  
 </div>
 
