--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 
   <button onclick="goToPage1()">HubPaLM</button>
 
-  <button onclick="goToPage2()">Go to Page 2</button>
+  <button onclick="goToPage2()">Music</button>
+
+  <button onclick="goToPage3()">Trex</button>
 
   <script>
-    var colors = ['red', 'green', 'blue', 'purple', 'orange'];
+    var colors = ['red', 'green', 'blue', 'purple', 'orange', 'yellow', 'pink'];
     var index = 0;
     
     function changeBGColor(){
@@ -48,11 +50,15 @@
     setInterval(changeBGColor, 1000);
 
     function goToPage1(){
-        window.location.href = "https://jivinsardine.github.io/Palm-API-ChatBot-V2/"; 
+        window.location.href = "HubPaLM/index.html"; 
     }
 
     function goToPage2(){
-      window.location.href = "page2.html";
+      window.location.href = "Music Player/index.html";
+    }
+
+    function goToPage3(){
+      window.location.href = "Trex/index.html";
     }
   </script>
 
